--- a/front_end/index.html
+++ b/front_end/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)), url('https://t4.ftcdn.net/jpg/05/77/75/01/360_F_577750106_a1K1BssbgP35XkFfcaFYbEhXv5MXVofr.jpg') center/cover no-repeat fixed;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)), url('https://www.shutterstock.com/image-photo/barbell-fitness-training-gym-sports-600nw-2139742761.jpg) center/cover no-repeat fixed;
             min-height: 100vh;
             margin: 0;
             display: flex;
