--- a/front_end/index.html
+++ b/front_end/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)), url('https://www.shutterstock.com/image-photo/barbell-fitness-training-gym-sports-600nw-2139742761.jpg) center/cover no-repeat fixed;
-            min-height: 100vh;
+            body {
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('YOUR_CHOSEN_URL_HERE') no-repeat center center fixed;
+    background-size: cover;
+     min-height: 100vh;
             margin: 0;
             display: flex;
             align-items: center;
