--- a/front_end/index.html
+++ b/front_end/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
-            body {
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('YOUR_CHOSEN_URL_HERE') no-repeat center center fixed;
-    background-size: cover;
-     min-height: 100vh;
+            background: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), 
+                        url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop') 
+                        no-repeat center center fixed;
+            background-size: cover;
+            min-height: 100vh;
             margin: 0;
             display: flex;
             align-items: center;
@@ -146,9 +147,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/api.js"></script>
 <script>
-    // Remove this redirect — it's causing loops. Move to protected pages like dashboard.html
-    // if (localStorage.getItem('access_token')) { ... }
-
     async function loginUser(event) {
         event.preventDefault();
         const btn = event.target.querySelector('button');
@@ -190,12 +188,12 @@
 
             window.location.href = 'dashboard.html';
 
-        }catch (err) {
-    console.error('Login error:', err);
-    errorEl.textContent = err.message;
-    localStorage.clear();  // Clear bad token
-    resetButton();
-}
+        } catch (err) {
+            console.error('Login error:', err);
+            errorEl.textContent = err.message;
+            localStorage.clear();
+            resetButton();
+        }
 
         function resetButton() {
             loginText.classList.remove('d-none');
@@ -203,7 +201,6 @@
             btn.disabled = false;
         }
     }
-</script>
 </script>
 </body>
 </html>
