--- a/front_end/sign_up.html
+++ b/front_end/sign_up.html
@@ -79,28 +79,51 @@
 
 <script src="assets/js/api.js"></script>
 <script>
-   document.getElementById('signupForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const data = {
-        username: document.getElementById('username').value,
-        email: document.getElementById('email').value,
-        first_name: document.getElementById('first_name').value,
-        last_name: document.getElementById('last_name').value,
-        password: document.getElementById('password').value,
-        password2: document.getElementById('password2').value
-    };
+    // CRITICAL FIX: Clear any existing tokens on signup page
+    localStorage.removeItem('access_token');
+    localStorage.removeItem('refresh_token');
+    // or: localStorage.clear(); if you want to be extra safe
 
-    try {
-        const response = await apiPost('/api/register/', data);  // Fixed endpoint
-        // Save tokens consistently
-        localStorage.setItem('access_token', response.access);  // Fixed key
-        localStorage.setItem('refresh_token', response.refresh);  // Fixed key
-        alert('Account created successfully!');
-        window.location.href = 'dashboard.html';
-    } catch (err) {
-        document.getElementById('error').textContent = 'Registration failed: ' + (err.message || 'Check fields and try again.');
-    }
-});
+    document.getElementById('signupForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const errorEl = document.getElementById('error');
+        errorEl.textContent = '';
+
+        const data = {
+            username: document.getElementById('username').value.trim(),
+            email: document.getElementById('email').value.trim(),
+            first_name: document.getElementById('first_name').value.trim(),
+            last_name: document.getElementById('last_name').value.trim(),
+            password: document.getElementById('password').value,
+            password2: document.getElementById('password2').value
+        };
+
+        // Basic validation
+        if (data.password !== data.password2) {
+            errorEl.textContent = 'Passwords do not match.';
+            return;
+        }
+        if (!data.username || !data.email || !data.password) {
+            errorEl.textContent = 'Please fill all required fields.';
+            return;
+        }
+
+        try {
+            const response = await apiPost('/api/register/', data);
+
+            // Save tokens
+            localStorage.setItem('access_token', response.access);
+            localStorage.setItem('refresh_token', response.refresh || '');
+
+            alert('Account created successfully! Welcome to FitTrack 🎉');
+            window.location.href = 'dashboard.html';
+
+        } catch (err) {
+            console.error('Registration error:', err);
+            errorEl.textContent = 'Registration failed: ' + (err.message || 'Please try again.');
+        }
+    });
+</script>
 </script>
 </body>
 </html>
